# react-native-test-project

./: App.tsx  ViewModule.tsx  package-lock.json  package.json
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  Test.cpp  Test.h  TestBinding.cpp  TestBinding.h  testproject.cpp
android/app/src/main/java/com/testproject/: MainActivity.java  MainApplication.java  SimpleDrawingViewManager.kt  ViewPackage.kt
android/app/src/main/java/com/testproject/view/: SimpleDrawingView.kt
android/app/src/main/java/com/testproject/view/renderer/: NativeRenderer.kt  ShapeRenderer.java  Triangle.java
android/app/src/main/res/values/: colors.xml
android/app/src/main/res/values-night/: colors.xml
